<resources>
    <string name="app_name">RUNOOB Android</string>
    <string name="runoob_case_set">RUNOOB案例集合</string>


    <!--测试案例的描述性语句-->
    <!--针对TestTextViewActivity-->
    <string name="textview_attr">TextView基本属性</string>

    <!--针对TestEditTextActivity-->
    <string name="edittext_attr">EditText基本属性</string>
    <string name="enter_username">用户名</string>
    <string name="enter_password">登录密码</string>
    <string name="login">登录</string>
    <string name="welcome_back">欢迎归来</string>

    <string name="button_attr">Button状态</string>

    <string name="imageview_attr">ImageView基本属性</string>
    <string name="radiobuton_attr">RadioButton基本用法</string>
    <string name="togglebutton_attr">ToggleButton基础</string>
    <string name="progressbar_attr">ProgressBar基础</string>
    <string name="progressbar_control">控制进度条</string>
    <string name="progressbar_stop">停止进度条</string>
    <string name="progressbar_start">启动进度条</string>
    <string name="circle_start">进度开始</string>
    <string name="circle_stop">进度暂停</string>
    <string name="circle_control">自定义圆形进度条控制</string>
    <string name="seekbar_attr">SeekBar基础</string>
    <string name="ratingbar_attr">RatingBar基础</string>
    <string name="scrollview_attr">ScrollView基础</string>
    <string name="datetime_attr">时钟日期基础</string>
    <string name="arrayadapter_attr">ArrayAdapter基础</string>
    <string name="simpleadapter_attr">SimpleAdapter基础</string>
    <string name="baseadapter_attr">BaseAdapter基础</string>
    <string name="listviewupdate_attr">ListView数据更新问题</string>
    <string name="customadapter_attr">自定义Adapter抽象优化</string>
    <string name="multilayoutadapter_attr">子项多布局的Adapter</string>
    <string name="gridview_attr">GridView基础</string>
    <string name="default_text">占位文本</string>

    <!--ListView Item 多布局中用来区分不同的子项-->
    <item name="TAG_APP" type="id"></item>
    <item name="TAG_BOOK" type="id"></item>

    <string name="spinner_title">分段选择</string>
    <string name="spinner_attr">Spinner单选列表基础</string>
    <string name="autocompletetextview_attr">自动补全输入框</string>
    <string name="expandablelistview_attr">ExpandableListView基础</string>
    <string name="viewflipper_static_attr">ViewFlipper静态图片轮播</string>
    <string name="viewflipper_dynamic_attr">ViewFlipper手势动态切换图片</string>
    <string name="notification_attr">Notification基础</string>
    <string name="alertdialog_attr">AlertDialog多种样式</string>
    <string name="miscdialog_attr">其他常见的对话框</string>
    <string name="popupwindow_attr">PopupWindow悬浮框</string>
    <string name="menus_attr">各种菜单</string>
    <string name="font_blue">蓝色</string>
    <string name="font_green">绿色</string>
    <string name="font_red">红色</string>
    <string name="androidevent_attr">安卓的事件处理机制</string>
    <string name="handler_attr">Handler示例</string>
    <string name="multipointer_attr">多点触摸</string>
    <string name="configuration_attr">Configuration基础</string>
    <string name="asynctask_attr">AsyncTask异步任务</string>
    <string name="gesturebasic_attr">Gesture识别基础</string>
    <string name="gestureadd_attr">添加手势</string>
    <string name="servicebasic_attr">Service基础</string>

    <string name="start_service_play">开始播放/启动服务</string>
    <string name="pause_music">暂停播放</string>
    <string name="stop_service_music">停止播放/停止服务</string>
    <string name="service_play_music_attr">通过Service控制的播放器</string>
    <string name="example_intentservice">IntentService实例</string>
    <string name="multiple_call_intentservice">发送按钮点击次数给IntentService</string>
    <string name="one_thread_one_intent">扩展Service类，一个线程处理一个Intent</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解除绑定</string>
    <string name="get_service_status">获取服务状态</string>
    <string name="bindservice_attr">绑定方式启动服务测试</string>
    <string name="show_result">显示查询结果</string>
    <string name="input_query_num">输入要查询的序号</string>
    <string name="start_query">查询</string>
    <string name="aidl_server_attr">AIDL Service基础</string>
    <string name="broadcast_case">广播接收器案例</string>
    <string name="broadcast_attr">广播接收器</string>
    <string name="broadcast_firealarm">发送火警报警</string>
    <string name="read_sms">读取短信（看Logcat）</string>
    <string name="contentprovider_attr">ContentProvider基础</string>
    <string name="read_contacts">读取联系人列表（看Logcat）</string>
</resources>
