<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TestProgressBarActivity">

    <!--系统提供的圆形进度条，依次是小中大-->
    <ProgressBar
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <!--系统提供的水平进度条-->
    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="18"
        />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="自定义圆形进度条一"
        android:gravity="center_horizontal"
        />

    <ToggleButton
        android:id="@+id/btnStopProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/progressbar_control"
        android:textOff="@string/progressbar_stop"
        android:textOn="@string/progressbar_start"
        />

    <ImageView
        android:id="@+id/iv_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/anim_progressbar"
        android:layout_gravity="center_horizontal"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="自定义圆形进度条二"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        >

        <com.lintex9527.custom.CircleProgressBar
            android:id="@+id/circir_pgbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ToggleButton
            android:id="@+id/tgbtn_circlepgbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/circle_control"
            android:textOff="@string/circle_stop"
            android:textOn="@string/circle_start"
            />

    </LinearLayout>


</LinearLayout>